old slurm/slurm-5267.out
clang++ -std=c++14 -stdlib=libc++ -O3 -ferror-limit=2 -Weverything -Wno-c++98-compat -Wno-c++98-compat-pedantic -Wno-sign-conversion -Wno-exit-time-destructors -Wno-float-equal -Wno-global-constructors -Wno-missing-declarations -Wno-unused-parameter -Wno-padded -Wno-shadow -Wno-weak-vtables -Wno-missing-prototypes -Wno-unused-variable -ferror-limit=1 -Wno-deprecated -Wno-conversion -Wno-double-promotion -c src/direct_cuda_pattern.cc -o ./obj/direct_cuda_pattern.o -Iinclude -I/usr/local/cuda/include -I/usr/local/include -I/usr/include/c++/v1
In file included from src/direct_cuda_pattern.cc:3:
In file included from include/f/cuda_pattern/cuda_pattern.hpp:5:
include/f/cuda_pattern/cuda_pattern_config.hpp:60:1: warning: control may reach end of non-void function [-Wreturn-type]
}//namespace f
^
In file included from src/direct_cuda_pattern.cc:3:
In file included from include/f/cuda_pattern/cuda_pattern.hpp:6:
include/f/cuda_pattern/cuda_pattern_data.hpp:10:11: error: redefinition of 'f' as different kind of symbol
namespace f
          ^
include/f/variate_generator/vg/distribution/f.hpp:30:12: note: previous definition is here
    struct f :  private gamma<Return_Type, Engine>
           ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
1 warning and 2 errors generated.
Makefile:28: recipe for target 'direct_cuda_pattern' failed
make: *** [direct_cuda_pattern] Error 1
/var/spool/slurmd/job05267/slurm_script: line 16: ./direct_cuda_pattern: No such file or directory

real	0m0.004s
user	0m0.000s
sys	0m0.000s
